# trustguard-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-node.yml  publish-python.yml
examples/: README.md
examples/go/: go.mod  main.go
examples/node/: attachments.mjs  basic.mjs  package-lock.json  package.json
examples/python/: async_basic.py  attachments.py  basic.py
go/: README.md  errors.go  go.mod  trustguard.go  trustguard_test.go  types.go
node/: README.md  package-lock.json  package.json  tsconfig.json
node/src/: client.ts  errors.ts  index.ts  types.ts
node/test/: client.test.ts
python/: README.md  pyproject.toml
python/src/trustguard/: __init__.py  _client.py  _errors.py  _models.py
python/tests/: test_client.py
